2006-09-04  Gabriel Burt  <gabriel.burt@gmail.com>

	* plugins/SmartPlaylists/smart-playlist.glade: Add Advanced expander to
	the smart playlist edit dialog.

	* plugins/SmartPlaylists/Makefile.am: Move things around.

	* plugins/SmartPlaylists/Editor.cs: Add options to the advanced expander's
	treeview of predefined smart playlists, and handle the logic for using
	them as a template or creating them.

2006-09-04  Ruben Vermeersch <ruben@Lambda1.be>

	* plugins/Podcast/DownloadCore/Dispatcher.cs: Only run the dispatcher
	thread when needed. This woke up banshee every 32ms, even when doing
	nothing (causing way too much cpu usage).

2006-09-02  Aaron Bockover  <abock@gnome.org>

	* plugins/Podcast/PodcastInfo.cs: Fix build with latest Banshee CVS

2006-08-07  Aaron Bockover  <abock@gnome.org>

	* banshee-official-plugins.mds:
	* plugins/MiniMode/MiniMode.mdp:
	* plugins/Recommendation/Recommendation.mdp: 
	* plugins/SmartPlaylists/SmartPlaylists.mdp:
	* plugins/Podcast/Podcast.mdp: Updated MonoDevelop projects

	* plugins/MiniMode/MiniModePlugin.cs: Updated plugin description

	* plugins/MiniMode/MiniModeWindow.cs: Removed old toggle states, using
	from Banshee.Gui now (BGO #350295); only allow window resizing 
	horizontally; clean up and review

	* plugins/MiniMode/minimode.glade: Renamed base vbox widget

2006-08-01  Mike Urbanski <michael.c.urbanski@gmail.com>
	
	* plugins/Podcast/FeedParsers/RFC822DateTime.cs: Now makes a best 
	effort to parse invalid RFC-822 date-times that are "close enough."  
	E.g. accepts "July" when "Jul" is expected for the month identifier 
	or "Monday" when "Mon" is expected for the day of week identifier.

2006-07-31  Mike Urbanski <michael.c.urbanski@gmail.com> 
	
	* AUTHORS: Added self as author.

	* plugins/Podcast/Podcast.mdp: Added 'RFC822DateTime.cs' to podcast 
	project.

	* plugins/Podcast/FeedParsers/RFC822DateTime.cs: Initial commit of 
	RFC-822 date-time parser.  Yay!
	