@@ -1,3 +1,13 @@
+2006-09-05  Gabriel Burt  <gabriel.burt@gmail.com>
+
+	* plugins/SmartPlaylists/smart-playlist.glade: Change the label of the
+	expander to Predefined Smart Tags from Advanced Options.
+
+	* plugins/SmartPlaylists/QueryBuilderModel.cs: Fix small bug w/
+	reconstructing date condition fields.
+
+	* plugins/SmartPlaylists/Editor.cs: Small change to def of favorites.
+
 2006-09-04  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* plugins/SmartPlaylists/smart-playlist.glade: Add Advanced expander to
